Thu, 20 Mar 2008 10:04:14 +0100 <thp@perli.net>
Filter "None" filenames from GtkFileChooser widgets

	* src/gpodder/config.py: Make sure we don't receive a "None" filename
	from GtkFileChooser widgets when connecting to the config manager

Wed, 19 Mar 2008 18:06:58 +0100 <thp@perli.net>
Change the context menu of the episode list popup menu

	* src/gpodder/gui.py: Simplify, re-structure and improve the context
	menu of the episode list popup menu (right-click menu); thanks to hex
	(justin.forest gmail.com) for suggesting this change and giving
	valuable input on gpodder-devel

Wed, 19 Mar 2008 15:45:15 +0100 <thp@perli.net>
Patch from Nikosapi to fix MP3 player sync progress

	* src/gpodder/sync.py: Patch from Nick (nikosapi.org) to fix MP3
	player sync problems: "Instead of displaying the proper percentage of
	the copied file in the FS-based sync dialog, gPodder would initially
	report 100% and near the end of the copy it would report percentages
	>100%."

Wed, 19 Mar 2008 15:02:10 +0100 <thp@perli.net>
Various Bluetooth-related fixes

	* data/gpodder.glade: Use the "bluetooth" icon instead of the (old?)
	"stock_bluetooth" icon; in Gnome 2.22, the "bluetooth" icon is nicer,
	i.e. more Tango-ish than the "stock_bluetooth" icon
	* src/gpodder/gui.py: Fix a logging error; Only show "Send to [...]
	via bluetooth"/"Send to bluetooth device" when we have already
	downloaded the episodes (won't obviously work otherwise..)
	* src/gpodder/util.py: Fix bluetooth_send_file to work with both
	bluetooth-sendto and gnome-obex-send (different command line argument
	format for both)

Sun, 16 Mar 2008 12:55:49 +0100 <thp@perli.net>
Python-feedparser is a dependency, so mention it in the README

	* README: Mention python-feedparser as a dependency in the README
	file; thanks to Alain Tauch for pointing this out on the mailing list

Wed, 12 Mar 2008 12:38:19 +0100 <thp@perli.net>
Updated translations for 0.11.1 stabilization period

	* data/messages.pot: Updated from source