@@ -1,3 +1,10 @@
+Thu, 20 Mar 2008 11:06:32 +0100 <thp@perli.net>
+Add demo code for displaying a splash screen
+
+	* doc/dev/splash-logo.py: Added testing code that would display a
+	splash screen (transparent if compositing is enabled); we currently
+	don't plan to use this code for reasons described on gpodder-devel
+
 Thu, 20 Mar 2008 10:04:14 +0100 <thp@perli.net>
 Filter "None" filenames from GtkFileChooser widgets
 
